--- a/assign2.html
+++ b/assign2.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        <h2 class="id1" style="padding-bottom:25px;padding-top:25px;"> Hello I'm Mark Parker</h2>
+        <!---<h2 class="id1" style="padding-bottom:25px;padding-top:25px;"> Hello I'm Mark Parker</h2>
         <h3>About me</h3>
         <p class="id1" style="margin:auto; width:300px;">I am Khyathi Reddy.I am a student</p>
         <h4>Skills</h4>
@@ -25,6 +25,7 @@
             <li class="id1" style="margin-bottom:10px">Dancing</li>
             <li class="id1" style="margin-bottom:10px">Drawing</li>
             <li class="id1" style="margin-bottom:10px">Acting</li>
-        </ol>
+        </ol>-->
+        <p>hi this is <strong>Khyathi</strong></p>
     </body>
 </html>
