--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -13,62 +13,66 @@
 
 <body>
   <header>
-    <div class="container-fluid signUpSec d-xl-none">
-      <div class="row">
-        <div class="col-6">
-          <img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3">
-        </div>
-        <div class="col-6 text-right">
-          <button class="btn-sm btn-outline-light mt-3 mb-3 mr-2">Sign up</button>
-          <nav class="navbar navbar-dark navDisplay p-0 mr-2">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-          </nav>
+    <div class="signUpSec">
+      <div class="container d-xl-none">
+        <div class="row">
+          <div class="col-6">
+            <img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3">
+          </div>
+          <div class="col-6 text-right">
+            <button class="btn-sm btn-outline-light mt-3 mb-3 mr-2">Sign up</button>
+            <nav class="navbar navbar-dark navDisplay p-0">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container-fluid signUpSec d-none d-xl-block text-center">
-      <div class="row">
-        <div class="col-12">
-          <li class="navDisplay mr-2"><img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3"></li>
-          <li class="navDisplay mr-2">
-            <div class="dropdown">
-              <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
-            </div>
-          </li>
-          <li class="navDisplay mr-2 navBarText">
-            Enterprise
-          </li>
-          <li class="navDisplay mr-2">
-            <div class="dropdown">
-              <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
-            </div>
-          </li>
-          <li class="navDisplay navBarText mr-2">
-            MarketPlace
-          </li>
-          <li class="navDisplay mr-4">
-            <div class="dropdown">
-              <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</button>
-            </div>
-          </li>
-          <li class="navDisplay mr-2">
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
-          </li>
-          <li class="navDisplay mr-2 navBarText">
-            Sign in
-          </li>
-          <li class="navDisplay">
-            <button class="btn btn-outline-light mt-3 mb-3">Sign up</button>
-          </li>
+    <div class="signUpSec">
+      <div class="container  d-none d-xl-block">
+        <div class="row">
+          <div class="col-12 ">
+            <li class="navDisplay mr-2"><img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3"></li>
+            <li class="navDisplay mr-2">
+              <div class="dropdown">
+                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
+              </div>
+            </li>
+            <li class="navDisplay mr-2 navBarText">
+              Enterprise
+            </li>
+            <li class="navDisplay mr-2">
+              <div class="dropdown">
+                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
+              </div>
+            </li>
+            <li class="navDisplay navBarText mr-2">
+              MarketPlace
+            </li>
+            <li class="navDisplay mr-4">
+              <div class="dropdown">
+                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</button>
+              </div>
+            </li>
+            <li class="navDisplay mr-2">
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              </form>
+            </li>
+            <li class="navDisplay mr-2 navBarText">
+              Sign in
+            </li>
+            <li class="navDisplay">
+              <button class="btn btn-outline-light mt-3 mb-3">Sign up</button>
+            </li>
+          </div>
         </div>
       </div>
     </div>
   </header>
   <nav>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-12 text-center d-md-none">
           <li class="navOpacity navBarList mt-2">
@@ -80,19 +84,8 @@
           <li class="navOpacity navDisplay navListItemsSpacing">Collections</li>
           <li class="navOpacity  navListItemsSpacing navDisplay">Events</li>
         </div>
-        <div class="col-12 d-none d-md-flex d-xl-none">
+        <div class="col-12 d-none d-md-flex">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3">Explore</li>
-          <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
-          <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
-          <li class="navOpacity navDisplay navListItemsSpacing mt-3">Collections</li>
-          <li class="navOpacity  navListItemsSpacing navDisplay mt-3">Events</li>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12 d-none d-xl-block text-center">
-          <li class="navDisplay navListItemsSpacing navOpacity mt-3 ">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Collections</li>
