--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -372,7 +372,7 @@
           </div>
         </div>
         <div class="d-none col-xl-4 d-xl-block">
-          <h5>Popular topics</h5>
+          <h5 class="mt-4">Popular topics</h5>
           <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">react</li>
           <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">javascript</li>
           <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">css</li>
