--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -56,8 +56,8 @@
               </div>
             </li>
             <li class="navDisplay mr-2">
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <form class="form-inline my-2 my-lg-0 githubLogo">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search GitHub" aria-label="Search">
               </form>
             </li>
             <li class="navDisplay mr-2 navBarText">
