--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -16,240 +16,248 @@
 <body>
   <!--<div class="container">
       <div class="row rowpad">
-        <div class="col-9 bg1">
-          <p>9</p>
-        </div>
-        <div class="col-3 bg2">
-         <p>3</p>
-        </div>
-      </div>
-      <div class="row rowpad">
-        <div class="col-4 bg1">
-          <p>4</p>
-        </div>
-        <div class="col-3 bg2">
-         <p>3</p>
-        </div>
-      </div>
-       <div class="row rowpad">
-        <div class="col-3 bg2">
-          <p>3</p>
-        </div>
-        <div class="col-6 bg1">
-         <p>6</p>
-        </div>
-        <div class="col-3 bg2">
-         <p>3</p>
-        </div>
-      </div>
-      <div class="row rowpad">
-      <div class="col-5 bg1">
-         <p>5</p>
-        </div>
-        </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-4 colborder">
-          <div class="align"><img src="../static/Skills/C Language Icon/css.png" alt="c-lang" class="imgborder"></div>
-          <div class="align lang">C</div>
-          <div class="align">C is a programming language</div>
-        </div>
-        <div class="col-4 colborder">
-          <div class="align"><img src="../static/Skills/HTML Icon/html(1).png" alt="html-lang" class="imgborder"></div>
-          <div class="align lang">HTML</div>
-          <div class="align">Hyper text Markup Language(HTML) is a markup language for creating a webpage</div>
-        </div>
-         <div class="col-4 colborder">
-          <div class="align"><img src="../static/Skills/CSS Icon/css(1).png" alt="css-lang" class="imgborder"></div>
-          <div class="align lang">CSS</div>
-          <div class="align">CSS Stands for Cascading Style Sheets.Its purpose is to style HTML document</div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-        <div class="col-1">
-          <img src="../static/Hobbies/swimming/swimming.png">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/travelling/Group 350@2x.png">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-3">
-          <img src="../static/Hobbies/man-red.svg" class="imgman">
-        </div>
-         <div class="col-3">
-          <img src="../static/Hobbies/man-red.svg" class="imgman">
-        </div>
-        <div class="col-2">
-          <img src="../static/Hobbies/man-red.svg" class="imgman2 imgmargin">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/man-red.svg" class="imgman2 imgmargin">
-        </div>
-         <div class="col-2">
-          <img src="../static/Hobbies/man-red.svg" class="imgman2 imgmargin">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-9">
-          <div class="row">
-            <div class="col-12 col9"> </div>
+          <div class="col-9 bg1">
+            <p>9</p>
           </div>
-          <div class="row">
-            <div class="col-6">
-              <div class="row">
-                <div class="col-4" style="background-color:black; height:40px;"></div>
-                <div class="col-4" style="background-color:salmon; height:40px;"></div>
-                <div class="col-4 colGreen"></div>
-              </div>
+          <div class="col-3 bg2">
+           <p>3</p>
+          </div>
+        </div>
+        <div class="row rowpad">
+          <div class="col-4 bg1">
+            <p>4</p>
+          </div>
+          <div class="col-3 bg2">
+           <p>3</p>
+          </div>
+        </div>
+         <div class="row rowpad">
+          <div class="col-3 bg2">
+            <p>3</p>
+          </div>
+          <div class="col-6 bg1">
+           <p>6</p>
+          </div>
+          <div class="col-3 bg2">
+           <p>3</p>
+          </div>
+        </div>
+        <div class="row rowpad">
+        <div class="col-5 bg1">
+           <p>5</p>
+          </div>
+          </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-4 colborder">
+            <div class="align"><img src="../static/Skills/C Language Icon/css.png" alt="c-lang" class="imgborder"></div>
+            <div class="align lang">C</div>
+            <div class="align">C is a programming language</div>
+          </div>
+          <div class="col-4 colborder">
+            <div class="align"><img src="../static/Skills/HTML Icon/html(1).png" alt="html-lang" class="imgborder"></div>
+            <div class="align lang">HTML</div>
+            <div class="align">Hyper text Markup Language(HTML) is a markup language for creating a webpage</div>
+          </div>
+           <div class="col-4 colborder">
+            <div class="align"><img src="../static/Skills/CSS Icon/css(1).png" alt="css-lang" class="imgborder"></div>
+            <div class="align lang">CSS</div>
+            <div class="align">CSS Stands for Cascading Style Sheets.Its purpose is to style HTML document</div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+          <div class="col-1">
+            <img src="../static/Hobbies/swimming/swimming.png">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/travelling/Group 350@2x.png">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <img src="../static/Hobbies/man-red.svg" class="imgman">
+          </div>
+           <div class="col-3">
+            <img src="../static/Hobbies/man-red.svg" class="imgman">
+          </div>
+          <div class="col-2">
+            <img src="../static/Hobbies/man-red.svg" class="imgman2 imgmargin">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/man-red.svg" class="imgman2 imgmargin">
+          </div>
+           <div class="col-2">
+            <img src="../static/Hobbies/man-red.svg" class="imgman2 imgmargin">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-9">
+            <div class="row">
+              <div class="col-12 col9"> </div>
             </div>
-            <div class="col-6 colViolet"></div>
+            <div class="row">
+              <div class="col-6">
+                <div class="row">
+                  <div class="col-4" style="background-color:black; height:40px;"></div>
+                  <div class="col-4" style="background-color:salmon; height:40px;"></div>
+                  <div class="col-4 colGreen"></div>
+                </div>
+              </div>
+              <div class="col-6 colViolet"></div>
+            </div>
           </div>
+          <div class="col-3 col3">3</div>
         </div>
-        <div class="col-3 col3">3</div>
+      </div>-
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 mobile1 col-lg-3 col-xl-2"></div>
+        <div class="col-12 col-sm-6 col-md-4 mobile2 col-lg col-xl-2"></div>
+        <div class="col-12 col-sm-6 col-md-4 mobile3 col-lg-3 col-xl-2"></div>
+        <div class="col-12 col-sm-6 col-md-4 mobile4 col-lg-3 col-xl-2"></div>
+        <div class="col-12 col-sm-6 col-md-4 mobile5 col-lg-3 col-xl-2"></div>
+        <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>
+        <div class="col-12 col-lg-6">
+            <div class="CompaniesBlock">PROYUGA</div>
+            <h4 class="headpad">End to End Assitance</h4>
+            <p>Proyuga Advanced Technologies Ltd. develops transformative products in VR, AR & MR. Their first product, iB Cricket,offers the world's most immersive cricket experience</p>
+            <span class="visitWebsite">Visit website</span>
+        </div>
+        <div class="col-12 col-lg-6">
+            <div class="CompaniesBlock">CYBEREYE</div>
+             <h4>End to End Assitance</h4>
+            <p>CyberEye Research Labs & Security Solution Pvt.Ltd. envisions to create a 'Smart and Secure World'.</p>
+            <span class="visitWebsite">Visit website</span>
+        </div>
       </div>
     </div>-
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-4 mobile1 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile2 col-lg col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile3 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile4 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile5 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-lg-6">
-          <div class="CompaniesBlock">PROYUGA</div>
-          <h4 class="headpad">End to End Assitance</h4>
-          <p>Proyuga Advanced Technologies Ltd. develops transformative products in VR, AR & MR. Their first product, iB Cricket,offers the world's most immersive cricket experience</p>
-          <span class="visitWebsite">Visit website</span>
+     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../frnds.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="col-12 col-lg-6">
-          <div class="CompaniesBlock">CYBEREYE</div>
-           <h4>End to End Assitance</h4>
-          <p>CyberEye Research Labs & Security Solution Pvt.Ltd. envisions to create a 'Smart and Secure World'.</p>
-          <span class="visitWebsite">Visit website</span>
+      <div class="carousel-item">
+        <img src="../prmse.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../sir.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>-
-   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../frnds.jpg" class="d-block w-100" alt="...">
+    <div class="spinner-border text-primary" role="status">
+      <span class="sr-only">Loading...</span>
     </div>
-    <div class="carousel-item">
-      <img src="../prmse.jpg" class="d-block w-100" alt="...">
+    <div class="spinner-border text-secondary" role="status">
+      <span class="sr-only">Loading...</span>
     </div>
-    <div class="carousel-item">
-      <img src="../sir.jpg" class="d-block w-100" alt="...">
+    <div class="spinner-border text-success" role="status">
+      <span class="sr-only">Loading...</span>
     </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>-
-  <div class="spinner-border text-primary" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-border text-secondary" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-border text-success" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-border text-danger" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-border text-warning" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-border text-info" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-border text-light" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-border text-dark" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>-->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 style d-none d-lg-flex d-xl-none"></div>
-      <div class="col-lg-6 style1 d-none d-lg-flex d-xl-none"></div>
-      <div class="col-12  d-none d-md-flex d-lg-none d-xl-none style1"></div>
-      <div class="col-12 d-flex d-sm-none d-md-none d-lg-none d-xl-none style"></div>
+    <div class="spinner-border text-danger" role="status">
+      <span class="sr-only">Loading...</span>
     </div>
+    <div class="spinner-border text-warning" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+    <div class="spinner-border text-info" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+    <div class="spinner-border text-light" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+    <div class="spinner-border text-dark" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 style d-none d-lg-flex d-xl-none"></div>
+        <div class="col-lg-6 style1 d-none d-lg-flex d-xl-none"></div>
+        <div class="col-12  d-none d-md-flex d-lg-none d-xl-none style1"></div>
+        <div class="col-12 d-flex d-sm-none d-md-none d-lg-none d-xl-none style"></div>
+      </div>
+    </div>-->
+  <div  class="dark" >
+    <div class="bg-primary" style="margin:auto; width:100px;">some</div>
   </div>
+  <span style="margin:auto;">some</span>
+  <div>
+    <span style="margin:auto; p-2">some text3</span>
+  </div>
+    
 </body>
 
 </html>
