--- a/assignments/assignment-24/practice.html
+++ b/assignments/assignment-24/practice.html
@@ -12,45 +12,49 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
-    <img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3">
-    <div>
-      <button class="btn-sm btn-outline-light mt-3 mb-3 mr-2 d-xl-none">Sign up</button>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="signUpSec">
+    <div class="container">
+      <nav class="navbar navbar-expand-xl">
+        <img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3">
+        <div>
+          <button class="btn-sm btn-outline-light mt-3 mb-3 mr-2 d-xl-none">Sign up</button>
+          <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <div class="dropdown">
+                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
+              </div>
+            </li>
+            <li class="nav-item active navBarText ml-2">
+              Enterprise
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
+              </div>
+            </li>
+            <li class="nav-item active navBarText ml-2">
+              MarketPlace
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</button>
+              </div>
+            </li>
+          </ul>
+          <div>
+            <form class="form-inline my-2 my-xl-0">
+              <input class="form-control mr-sm-2 githubLogo" type="search" placeholder="Search GitHub">
+              <a class="nav-link navBarText" href="#" tabindex="-1" aria-disabled="true">Sign in</a>
+              <button class="btn btn-outline-light my-2 my-sm-0 d-none d-xl-block" type="submit">Sign Up</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     </div>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <div class="dropdown">
-            <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
-          </div>
-        </li>
-        <li class="nav-item active navBarText">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Enterprise</a>
-        </li>
-        <li class="nav-item">
-          <div class="dropdown">
-            <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
-          </div>
-        </li>
-        <li class="nav-item active navBarText">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">MarketPlace</a>
-        </li>
-        <li class="nav-item">
-          <div class="dropdown">
-            <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pricing</button>
-          </div>
-        </li>
-      </ul>
-      <div>
-        <form class="form-inline my-2 my-xl-0">
-          <input class="form-control mr-sm-2 githubLogo" type="search" placeholder="Search GitHub">
-          <a class="nav-link navBarText" href="#" tabindex="-1" aria-disabled="true">Sign in</a>
-          <button class="btn btn-outline-light my-2 my-sm-0 d-none d-xl-block" type="submit">Sign Up</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+  </div>
 </body>
