--- a/assignments/assignment-24/practice.html
+++ b/assignments/assignment-24/practice.html
@@ -29,16 +29,16 @@
                 <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why GitHub?</button>
               </div>
             </li>
-            <li class="nav-item active navBarText ml-2">
-              Enterprise
+            <li class="nav-item active ml-2">
+               <a class="nav-link navBarText" href="#" tabindex="-1" aria-disabled="true">Enterprise</a>
             </li>
             <li class="nav-item">
               <div class="dropdown">
                 <button class="btn  dropdown-toggle dropdown navBarText" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</button>
               </div>
             </li>
-            <li class="nav-item active navBarText ml-2">
-              MarketPlace
+            <li class="nav-item active ml-2">
+                <a class="nav-link navBarText" href="#" tabindex="-1" aria-disabled="true">Marketplace</a>
             </li>
             <li class="nav-item">
               <div class="dropdown">
