--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -198,7 +198,7 @@
               <p class="featuredTopicsContent mb-0">3D modelling is the process of virtually developing the surface and structure of a 3D object </p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -212,7 +212,7 @@
               <p class="featuredTopicsContent mb-0">Ajax is a technique for creating interactive web applications.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -226,7 +226,7 @@
               <p class="featuredTopicsContent mb-0">Algorithms are self contained sequences that carry out a variety of tasks.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -240,7 +240,7 @@
               <p class="featuredTopicsContent mb-0">Amp is a non-blocking currency framework for php.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -254,7 +254,7 @@
               <p class="featuredTopicsContent mb-0">Android is an operating system built by google designed for mobile devices.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -268,7 +268,7 @@
               <p class="featuredTopicsContent mb-0">Angular is an open source web application platform</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -282,7 +282,7 @@
               <p class="featuredTopicsContent mb-0">Ansible is a simple and powerful automation engine.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -296,7 +296,7 @@
               <p class="featuredTopicsContent mb-0">An Api(Application Program Interface) is a collection of protocols and subroutines for building software</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -310,7 +310,7 @@
               <p class="featuredTopicsContent mb-0">Arduino is an open source hardware and software company and maker community.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -324,7 +324,7 @@
               <p class="featuredTopicsContent mb-0">ASP.NET is a web framework for building modern web apps and services.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -338,7 +338,7 @@
               <p class="featuredTopicsContent mb-0">Atom is a open source text editor built with web technologies</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -352,7 +352,7 @@
               <p class="featuredTopicsContent mb-0">An awesome list is a list of awesome things curated by the community.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -366,7 +366,7 @@
               <p class="featuredTopicsContent mb-0">Amazon Web Services provided on-demand cloud computing platform on a subscription basis.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -380,7 +380,7 @@
               <p class="featuredTopicsContent mb-0">Azure is a cloud computing service provided by Microsoft.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
@@ -394,7 +394,7 @@
               <p class="featuredTopicsContent mb-0">Mobile apps,mobile OS,mobile databases, & mobile testing frameworks.</p>
               <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block text-right">
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">&nbsp; Star</button>
             </div>
           </div>
