--- a/assignments/assignment-25/index.html
+++ b/assignments/assignment-25/index.html
@@ -34,7 +34,7 @@
         <div class="col-12 backgroundImg text-center">
           <img src="assets/profile-thumbnail.png" alt="profile_thumbnail" class="profile_thumbnailImg">
           <h5 class="mt-4 backgroundImgContent">Spatial</h5>
-          <p class="backgroundImgContent Context mt-2">Lorem ipsum dolor sit amet nollem consequat interdum vivavus ggvhdf yydyfghsds  dcbdg</p>
+          <p class="backgroundImgContent Context mt-2">Lorem ipsum dolor sit amet nollem consequat<br>interdum vivavus ggvhdf yydyfghsds  dcbdg</p>
           <button class="btn-sm btn-primary">ContactUs</button>
         </div>
       </div>
@@ -43,10 +43,10 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-6 mt-4 \">
-          <h4>Maecenas luctus lectus</h4>
-          <p class="Context">perspiciatis dolorenque recusandae dolor</p>
-          <p class="mt-4 Context">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        <div class="col-12 col-md-6">
+          <h4 class="mt-4">Maecenas luctus lectus</h4>
+          <p class="Context ContextSubHead">perspiciatis dolorenque recusandae dolor</p>
+          <p class="mt-4 Context mb-0">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
           magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
           quis nostrud exerci tation ullamcorper suscipit lobortis nisl
@@ -68,6 +68,81 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="imagesContainer">
+      <div class="container">
+        <div class="row mt-4 mb-4">
+          <div class="col-12 text-center">
+              <h5 class="mt-4">Fusce ultrices fringilla</h5>
+              <p class="Context">Maecenas vitae tellus feugiat eleifend</p>
+          </div>
+          <div class="col-12 col-md-6 mt-2">
+            <div class="card">
+              <div class="card-body p-0">
+                <img src="assets/card-image-1.jpg" alt="nature" class="cardImages">
+                <h6 class="text-center mt-2">Lorem ipsum dolor sit amet</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 mt-2">
+            <div class="card">
+              <div class="card-body p-0">
+                <img src="assets/card-image-2.jpg" alt="nature" class="cardImages">
+                <h6 class="text-center mt-2">Lorem ipsum dolor sit amet</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 text-center mt-4 mb-4">
+            <button class="btn-sm btn-primary">Nullaluctus</button>
+            <button class="btn-sm btn-secondary">Sedvulputate</button>
+          </div>
+        </div>
+      </div>  
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col-12 text-center ">
+          <h5 class="mt-4">Fusce ultrices fringilla</h5>
+          <p class="Context">Maecenas vitae tellus feugiat eleifend</p>
+        </div>
+        <div class="col-12 col-md-6 mb-2">
+          <img src="assets/card-image-2.jpg" alt="nature" class="cardImages h-100">
+        </div>
+        <div class="col-12 col-md-6 mb-2">
+          <div class="row">
+            <div class="col-12">
+              <img src="assets/card-image-1.jpg" alt="nature" class="cardImages mb-2">
+            </div>
+            <div class="col-12">
+              <img src="assets/background.jpg" alt="nature" class="cardImages">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="imagesContainer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 mt-3">
+            <ul class="p-0">
+              <li class="mr-1"><img src="assets/b-icon.jpg" alt="b-icon" class="bIcon"></li>
+              <li class="title">Website Title</li>
+            </ul>
+          </div>
+          <div class="col-6 mt-3 text-right">
+            <li class="mr-2"><img src="assets/social-icons/facebook.svg" alt="facebook" class="socialIcons"></li>
+            <li class="mr-2"><img src="assets/social-icons/instagram.svg" alt="instagram" class="socialIcons"></li>
+            <li class="mr-2"><img src="assets/social-icons/linkedin.svg" alt="linkedin" class="socialIcons"></li>
+            <li class="mr-2"><img src="assets/social-icons/pinterest.svg" alt="pinterest" class="socialIcons"></li>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
