--- a/assignments/assignment-25/index.html
+++ b/assignments/assignment-25/index.html
@@ -74,7 +74,7 @@
         <div class="row mt-4 mb-4">
           <div class="col-12 text-center">
               <h5 class="mt-4">Fusce ultrices fringilla</h5>
-              <p class="Context">Maecenas vitae tellus feugiat eleifend</p>
+              <p class="Context mb-4">Maecenas vitae tellus feugiat eleifend</p>
           </div>
           <div class="col-12 col-md-6 mt-2">
             <div class="card">
@@ -105,7 +105,7 @@
       <div class="row mb-4">
         <div class="col-12 text-center ">
           <h5 class="mt-4">Fusce ultrices fringilla</h5>
-          <p class="Context">Maecenas vitae tellus feugiat eleifend</p>
+          <p class="Context mb-4">Maecenas vitae tellus feugiat eleifend</p>
         </div>
         <div class="col-12 col-md-6 mb-2">
           <img src="assets/card-image-2.jpg" alt="nature" class="cardImages h-100">
