--- a/assignments/assignment-25/index.html
+++ b/assignments/assignment-25/index.html
@@ -10,7 +10,6 @@
   <script src="../../bootstrap/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
-
 <body>
   <header>
     <div class="container">
@@ -30,11 +29,19 @@
   </header>
   <section>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row d-lg-none">
         <div class="col-12 backgroundImg text-center">
           <img src="assets/profile-thumbnail.png" alt="profile_thumbnail" class="profile_thumbnailImg">
           <h5 class="mt-4 backgroundImgContent">Spatial</h5>
           <p class="backgroundImgContent Context mt-2">Lorem ipsum dolor sit amet nollem consequat<br>interdum vivavus ggvhdf yydyfghsds  dcbdg</p>
+          <button class="btn-sm btn-primary">ContactUs</button>
+        </div>
+      </div>
+      <div class="row d-none d-lg-block">
+        <div class="col-12 backgroundImg text-center">
+          <img src="assets/profile-thumbnail.png" alt="profile_thumbnail" class="profile_thumbnailImg">
+          <h3 class="mt-4 backgroundImgContent">Spatial</h3>
+          <p class="xlBackgroundImgContent backgroundImgContent mt-2">Lorem ipsum dolor sit amet nollem consequat<br>interdum vivavus ggvhdf yydyfghsds  dcbdg</p>
           <button class="btn-sm btn-primary">ContactUs</button>
         </div>
       </div>
